# rhino-system

./: README.md  meson.build  org.rhinolinux.system.json  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
data/: meson.build  org.rhinolinux.system.appdata.xml.in  org.rhinolinux.system.desktop.in  org.rhinolinux.system.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
rhinosystem/: main.py  meson.build  rhinosystem.gresource.xml  rhinosystem.in  style.css  window.py  window.ui
rhinosystem/gtk/: console.ui  progressbar.ui  sysinfo.ui  upgrade.ui
rhinosystem/scripts/: get_board_model.sh  get_cpu_arm.sh  get_cpu_info.sh  get_disk_info.sh  get_gpu.sh  get_gpu_arm.sh  get_memory.sh  meson.build
rhinosystem/utils/: command.py  deviceinfo.py  log.py  meson.build  threading.py
rhinosystem/views/: meson.build  sysinfo.py  upgrade.py
rhinosystem/views/upgradepages/: console.py  meson.build  progressbar.py
rhinosystem/widgets/: inforow.py  inforow.ui  meson.build
src/: rhinosystem.gresource.xml  window.py  window.ui
